--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -47,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DtoArquivo.cs" />
+    <Compile Include="CartaoCredito.cs" />
+    <Compile Include="TransacaoPagamento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
