--- a/Unituness/Unituness.csproj
+++ b/Unituness/Unituness.csproj
@@ -187,11 +187,12 @@
     <Compile Include="Content\JsonHelper.cs" />
     <Compile Include="Content\StringExtensions.cs" />
     <Compile Include="Content\TransacaoCartao.cs" />
+    <Compile Include="Controllers\Admin\VendasController.cs" />
     <Compile Include="Controllers\API\PagamentoController.cs" />
-    <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\Admin\AdminController.cs" />
+    <Compile Include="Controllers\Unitunes\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\PagamentoController.cs" />
+    <Compile Include="Controllers\Unitunes\PagamentoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -302,7 +303,7 @@
     <Content Include="img\tn_user_07.jpg" />
     <Content Include="Scripts\angular_1.2.9.min.js" />
     <Content Include="Scripts\angular_app.js" />
-    <Content Include="Scripts\view\limparbases.js" />
+    <Content Include="Scripts\view\vendas.js" />
     <Content Include="Theme\404.html" />
     <Content Include="Theme\assets\css\animate-custom.css" />
     <Content Include="Theme\assets\css\ezmark.css" />
@@ -465,6 +466,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Pagamento\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Vendas\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
