--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CartaoCredito.cs" />
     <Compile Include="TransacaoPagamento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Midia.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
