--- a/Unituness/Unituness.csproj
+++ b/Unituness/Unituness.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Content\StringExtensions.cs" />
     <Compile Include="Content\TransacaoCartao.cs" />
     <Compile Include="Controllers\Admin\VendasController.cs" />
+    <Compile Include="Controllers\API\MidiaController.cs" />
     <Compile Include="Controllers\API\PagamentoController.cs" />
     <Compile Include="Controllers\Admin\AdminController.cs" />
     <Compile Include="Controllers\MidiaController.cs" />
